--- a/Report/Algoritmo genetico.tex
+++ b/Report/Algoritmo genetico.tex
@@ -42,7 +42,7 @@ Los algoritmos genéticos simulan el comportamiento evolutivo de una población,
 	\item La función objetivo es muy sensible para los algoritmos genéticos; si se define incorrectamente, puede impedir encontrar una solución adecuada al problema.
 	\item La elección de los parámetros (tamaño de la población, tasa de cruzamiento, selección de padres, tasa de mutación, entre otros) puede ser compleja. Una mala configuración puede provocar un bajo rendimiento.
 	\item Requieren un alto tiempo de ejecución y potencia de cómputo.
-	\item Existe el riesgo de convergencia prematura, es decir, que un individuo se reproduzca excesivamente y reduzca la diversidad genética, lo cual puede llevar a un óptimo local no deseado.
+	\item Existe el riesgo de convergencia prematura, es decir, que un individuo se reproduzca excesivamente y reduzca la diversidad genética, lo cual puede llevar a un óptimo local no deseado \cite{gad}.
 \end{itemize}
 
 \subsection{Fenotipo y genotipo}
