--- a/Report/referencias_GA.bib
+++ b/Report/referencias_GA.bib
@@ -35,3 +35,21 @@
 	year      = {2016},
 	note      = {Accedido el 26 de marzo de 2025}
 }
+
+@online{gas,
+	author    = {V. Mallawaarachchi},
+	title     = {Introduction to Genetic Algorithms — Including Example Code},
+	year      = {2024},
+	url       = {https://towardsdatascience.com/introduction-to-genetic-algorithms-including-example-code-e396e98d8bf3},
+	note      = {Accedido el 27 de octubre de 2024},
+	howpublished = {\url{https://towardsdatascience.com/introduction-to-genetic-algorithms-including-example-code-e396e98d8bf3}}
+}
+
+@online{gad,
+	author    = {R. Garduño Juárez},
+	title     = {Algoritmos genéticos},
+	year      = {2024},
+	url       = {https://conogasi.org/articulos/algoritmos-geneticos/},
+	note      = {Accedido el 27 de octubre de 2024},
+	howpublished = {\url{https://conogasi.org/articulos/algoritmos-geneticos/}}
+}
