--- a/Report/Codigo.tex
+++ b/Report/Codigo.tex
@@ -41,7 +41,7 @@ class Problem(ABC):
   def printInformation(self) -> None: pass
 \end{lstlisting}
 
-\subsubsection{Knapsack problem}
+\subsection{Knapsack problem}
 
 La clase \textit{knapsackProblem} hereda de la clase \textit{Problem} e implementa las siguientes funciones.
 
